--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
           <h1>Contact Me</h1>
             <div class="contact-detail">
               <i class="fa-solid fa-paper-plane"></i>
-              <p>contact@example.com</p>
+              <p>nguonsarady@gmail.com</p>
             </div>
             <div class="contact-detail">
               <i class="fa-solid fa-phone-volume"></i>
